tests/baselines/reference/assignmentNonObjectTypeConstraints(strict=true).errors.txt
assignmentNonObjectTypeConstraints.ts(10,11): error TS7008: Member 'a' implicitly has an 'any' type.
assignmentNonObjectTypeConstraints.ts(11,11): error TS7008: Member 'b' implicitly has an 'any' type.


==== assignmentNonObjectTypeConstraints.ts (2 errors) ====
    const enum E { A, B, C }
    
    function foo<T extends number>(x: T) {
        var y: number = x;  // Ok
    }
    
    foo(5);
    foo(E.A);
    
    class A { a }
              ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    class B { b }
              ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
    
    function bar<T extends A | B>(x: T) {
        var y: A | B = x;  // Ok
    }
    
    bar(new A);
    bar(new B);
    